2020/04/01    8:13:10.14 AutoCommit.bat by Darian